# HacktT

./: .gitignore  full_log.txt  index.html  models-manifest.json  package.json  tailwind.config.js  tsconfig.json  vite.conf.json  vite.config.ts
backend_service/: main.py  requirements.txt  test_suite.py
backend_service/core/: database.py  embedder.py  engine.py  llm.py  memory.py  rag.py  retriever.py  vision.py
backend_service/prompts/: __init__.py  base.py  code.py  code_prompt.py  orchestrator.py  orchestrator_prompt.py  rag.py  rag_prompt.py  schemas.py  speech.py
backend_service/services/: __init__.py  audio.py  chat_service.py  code_watcher.py  http_api.py  idle_manager.py  monitor.py  port_listeners.py  query.py  screen.py  screen_monitor.py  socket_listener.py  threat_scanner.py  websocket.py
backend_service/utils/: __init__.py  config.py  downloader.py  injector.py  logger.py  memory.py  preprocessor.py  state.py
docs/: index.html  privacy.html
public/: index.html  splash.html
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/installer-assets/: license.txt
src-tauri/installer-assets/nsis/: installer.nsh
src-tauri/resources/: hackt.txt
src-tauri/src/: commands.rs  main.rs  permissions.rs
src/components/: AuthScreen.tsx  ChatInterface.tsx  Dashboard.tsx  PassiveBubble.tsx  Settings.tsx
src/components/auth/: AuthScreen.tsx
src/components/feedback/: BootScreen.tsx  ConnectionStatus.tsx  ErrorBoundary.tsx
src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx  Starfield.tsx
src/components/setup/: FirstRunSetup.tsx
src/components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx  Divider.tsx  Input.tsx  ModeToggle.tsx  ProgressBar.tsx  Tooltip.tsx  index.ts
src/components/views/: ChatView.tsx  CodeDiffModal.tsx  DashboardView.tsx  PassiveBubble.tsx  SettingsView.tsx
src/hooks/: useBackendHealth.ts  useBootSequence.ts
src/store/: systemStore.ts
src/styles/: globals.css
