[package]
name = "hackt"
version = "1.0.0"
description = "HackT Sovereign Agent"
authors = ["Operator"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "protocol-asset", "fs-all", "dialog-all", "app-all", "shell-open", "custom-protocol", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.33", features = ["full"] }

reqwest = { version = "0.11", features = ["json"] }
tauri-plugin-deep-link = "0.1"
uuid = { version = "1.4", features = ["v4"] }
