[package]
name = "hackt"
version = "1.0.0"
description = "HackT Sovereign Agent"
authors = ["Operator"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# ✅ FIXED: Removed "custom-protocol" and "protocol-asset" to ensure a clean build
tauri = { version = "1.5", features = [ "fs-all", "dialog-all", "app-all", "shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.33", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tauri-plugin-deep-link = "0.1"
uuid = { version = "1.4", features = ["v4"] }
